--- a/feature/src/main/res/layout/fragment_task_list.xml
+++ b/feature/src/main/res/layout/fragment_task_list.xml
@@ -7,16 +7,13 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_animation_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="0dp"
+        android:src="@drawable/ic_sync_white_48dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/tv_progres_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
