Description inside Task Detail

--- a/feature/src/main/res/layout/view_task_item.xml
+++ b/feature/src/main/res/layout/view_task_item.xml
@@ -50,7 +50,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Lolzin"
+                android:text=""
                 android:textColor="@color/colorPrimary"
                 android:textSize="26sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
@@ -67,11 +67,26 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Lolzin"
+                android:text=""
                 android:textColor="@color/colorPrimary"
                 app:layout_constraintEnd_toStartOf="@+id/iv_project_logo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_task_content" />
+
+            <TextView
+                android:id="@+id/tv_description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text=""
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintEnd_toStartOf="@+id/iv_project_logo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_task_list_name" />
 
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/chart"
@@ -150,7 +165,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginStart="8dp"
-                        android:text="LOL"
+                        android:text=""
                         android:textColor="@color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
